@startuml
!theme plain
hide empty members

left to right direction

package "Entity" {
    class UserAccount {
        - Integer userId
        - String username
        - String email
        - String passwordHash
        - List<Role> roles
        - AccountStatus status
        - Boolean isVerified
        - DateTime createdAt
        - DateTime updatedAt
        - String contactInfo
        - String location
        - Float latitude
        - Float longitude
        + create()
        + verifyCredentials()
        + updateStatus()
        + updatePassword()
        + isActive()
        + getByUsername()
        + getById()
    }

    class Session {
        - String sessionId
        - Integer userId
        - DateTime createdAt
        - DateTime expiresAt
        - String ipAddress
        - String userAgent
        + create()
        + destroy()
        + isValid()
        + getByUserId()
    }

    class PlayerProfile {
        - Integer playerId
        - Integer userId
        - String displayName
        - String position
        - Integer skillLevel
        - String bio
        - String profileImage
        - Date dateOfBirth
        - Float height
        - Float weight
        - PreferredFoot preferredFoot
        - DateTime createdAt
        - DateTime updatedAt
        + create()
        + update()
        + getByUserId()
        + searchByPosition()
        + searchBySkillLevel()
    }
}

package "Controller" {
    class AuthController {
        - UserAccountRepository userRepository
        - SessionRepository sessionRepository
        - EmailService emailService
        + register()
        + login()
        + logout()
        + changePassword()
        - validateInput()
        - hashPassword()
        - verifyPassword()
        - sendVerificationEmail()
    }

    class PlayerController {
        - PlayerProfileRepository playerRepository
        + getPlayerProfile()
        + updateProfile()
        - validateProfileData()
    }
}

package "Service" {
    class EmailService {
        - String smtpHost
        - Integer smtpPort
        - String senderEmail
        - String senderName
        + sendVerificationEmail()
        + sendPasswordResetEmail()
        + sendNotificationEmail()
        - buildEmailTemplate()
        - send()
    }
}

package "Repository" {
    interface UserAccountRepository < UserAccount >
    interface SessionRepository < Session >
    interface PlayerProfileRepository < PlayerProfile >
}

' --- RELATIONSHIPS ---

UserAccount "1" --> "*" Session : has
UserAccount "1" --> "0..1" PlayerProfile : has

AuthController ..> UserAccountRepository : uses
AuthController ..> SessionRepository : uses
AuthController ..> EmailService : uses

PlayerController ..> PlayerProfileRepository : uses

' --- ENUMS ---

enum Role {
    Player
    TeamLeader
    FieldOwner
    Moderator
}

enum AccountStatus {
    Active
    Suspended
    Banned
    Pending
    Deleted
}

enum PreferredFoot {
    Left
    Right
    Both
}
@enduml
